# recd

./: CMakeLists.txt  README.md  recd.kdev4
Dependencies/: libvo-aacenc0_0.1.2-1_amd64.deb
config/: recd.cfg
docs/doxy/: recd.doxy
include/: IRecdCommand.h  Recd.h  RecdAudioReader.h  RecdChannel.h  RecdChannelFactory.h  RecdClient.h  RecdCmdServer.h  RecdConfig.h  RecdConfigException.h  RecdEncoderCollector.h  RecdEvents.h  RecdHighLightsEncoder.h  RecdMbxItem.h  RecdParser.h  RecdReaderCollector.h  RecdRenderEncoder.h  RecdResult.h  RecdStreamEncoder.h  RecdStreamReader.h
include/COMMANDS/: RecdCheckDiskSpeed.h  RecdEstimateTime.h  RecdGetBuffers.h  RecdGetDiskSize.h  RecdGetVersion.h  RecdHelp.h  RecdList.h  RecdStartHighLights.h  RecdStartRecording.h  RecdStopRecording.h
install/linux/: README  check.cron  cron.txt  install.sh  install.sh~  md5.txt  prepare.sh
install/linux/cfg/: recd.cfg
install/linux/tools/: capture
install/releases/version_1.1.0.0/: release notes.txt
install/releases/version_1.1.0.0-r1/: recd - release notes.txt
install/releases/version_1.2.0.0/: recd - release notes.txt
install/releases/version_1.3.2.0/: recd - release notes.txt
install/releases/version_1.3.3.0/: recd - release notes.txt
install/releases/version_1.3.4.0/: recd - release notes.txt
install/releases/version_1.3.5.0/: recd - release notes.txt
src/: Recd.cpp  RecdAudioReader.cpp  RecdChannel.cpp  RecdChannelFactory.cpp  RecdClient.cpp  RecdCmdServer.cpp  RecdConfig.cpp  RecdConfigException.cpp  RecdEncoderCollector.cpp  RecdEvents.cpp  RecdHighLightsEncoder.cpp  RecdParser.cpp  RecdReaderCollector.cpp  RecdRenderEncoder.cpp  RecdStreamEncoder.cpp  RecdStreamReader.cpp  main.cpp
utils/: capture.cpp
